--- a/group.html
+++ b/group.html
@@ -73,8 +73,6 @@
   </ul>
   </li>
 
-<ul style="width:42em; text-align: left">
-
   <li style="margin-bottom: 1ex;"><b><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> starting 2019-05:<br/>
@@ -102,7 +100,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://artagnon.com">Ramkumar Ramachandra</b></a>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-08 to 2020-07:<br/>
+    <li style="margin-top: 1ex;">Research <!-- Intern/ -->Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-08 to 2020-07:
      Relational program verification</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
@@ -133,7 +131,7 @@
   <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD Student at University of Chile]</div> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/victor-dumitrescu">Victor Dumitrescu</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://gitlab.com/victor-dumitrescu">Victor Dumitrescu</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Engineer at <a href="https://www.msr-inria.fr/">MSR-Inria</a> from 2017-01 to 2018-11:<br/>
       Implementing Meta-programming and Tactics in F*</li>
@@ -168,7 +166,7 @@
     <li style="margin-top: 1ex;">Visiting Professor on Sabbatical: 2017-09 to 2018-07</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [<b>Now Full Professor &amp; Associate Dean for Graduate Programs at <a href="">Northeastern University</a></b>]
+  [<b>Full Professor &amp; Associate Dean for Graduate Programs at <a href="">Northeastern University</a></b>]
   </div>
   </li>
 
