--- a/group.html
+++ b/group.html
@@ -68,9 +68,13 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2019-03:<br/>
+    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-03 to 2020-01:<br/>
       <a href="https://catalin-hritcu.github.io/students/topics/2018/fstar-topics-tezos.pdf">The Formal Semantics and Evolution of the F* Verification System</a></li>
   </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [Now at <a href="https://www.marigold.dev">Marigold</a> (working on <a href="https://ligolang.org/">Ligo</a>)
+   and Tallinn University of Technology]
+  </div>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a></b>
