--- a/group.html
+++ b/group.html
@@ -63,8 +63,14 @@
 
 <h2>Past Group Members</h2>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher)</li></b>
-<!-- http://perso.ens-lyon.fr/adrien.durier -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> then at MPI-SP, 2019-10 to 2021-??:<br/>
+    <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a>
+    </li>
+  </ul>
+  
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a></b>
   <ul>
