--- a/group.html
+++ b/group.html
@@ -63,6 +63,8 @@
 
 <h2>Past Group Members</h2>
 
+<ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>
   <ul>
     <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> then at MPI-SP, 2019-10 to 2021-??:<br/>
