--- a/group.html
+++ b/group.html
@@ -24,21 +24,45 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a></b>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-06:<br/>
-    <a href="https://arxiv.org/abs/1807.04603">The Formal Foundations of Secure Compilation</a></li>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
+    <a href="">A Formal Framework for Correct and Secure Compilation</a></li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05:<br/>
     <a href="https://arxiv.org/abs/1807.04603">Robust Property Preservation for Secure Compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
+[PhD student at Inria/ENS Paris, then at MPI-SP/RUB]<br/>
+[<b>Now Formal Verification Engineer/Researcher in the Dresden Research Center of Huawei</b>]
+</div></li>
+
+<!-- https://www.linkedin.com/in/cezar-andrici-49771663/ -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.mpi-sp.org/">MPI-SP</a>, since 2021-10:<br/>
+    Towards the secure interoperability between F* and ML
+    </li>
+    <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-07 to 2020-11:<br/>
+    Towards the secure interoperability between F* and ML
+    </li>
+    <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-07 to 2019-11:<br/>
+    Verifying programs with IO in F* including a simple web server</li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [MSc student at University of Iasi, Romania] [PhD student at MPI-SP/RUB]
+  </div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></b>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-08:<br/>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
     Secure Compartmentalizing Compilation to a Tagged Architecture</li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
     <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]
+[PhD student at Inria/ENS Paris, then at MPI-SP/RUB]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/mtzguido">Guido Martínez</a></b>
   <ul>
@@ -47,16 +71,44 @@
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2018-09 to 2018-12:<br/> <a href="https://arxiv.org/abs/1803.06547">Meta-F*: Proof Automation with SMT, Tactics, and Metaprograms</a></li>
     <li style="margin-top: 1ex;">Research Internship funded by MSR-Inria Joint Centre, 2016-01 to 2016-06:<br/> <a href="https://www.fstar-lang.org/papers/dm4free/">Dijkstra Monads for Free</a></li>
   </ul>
-  <!-- <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]</div></li> -->
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at 
+PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
+[PhD student <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
+[<b>Will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022</b>]
+</div>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> since 2018-01:<br/>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a> since 2020-05:<br/>
+    <a href="https://secure-compilation.github.io">Formally Secure Compilation</a> and Formal Methods for Side-Channel Secure Hardware
+    </li>
+    <li style="margin-top: 1ex;">Starting Researcher Position at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2018-01 to 2020-04:<br/>
       <a href="https://arxiv.org/abs/1802.00588">Formally Secure Compilation Despite Dynamic Compromise</a></li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar-Constantin Andrici</a> (Research Intern / Engineer, University of Iasi, Romania)</b></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
+  <ul>
+    <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-10 to 2022-09:<br/>
+    Formal verification in <a href="https://www.fstar-lang.org">F*</a> and <a href="https://github.com/SSProve">SSProve</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [<b>Soon tenured researcher (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></b>]
+  </div>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://cs.au.dk/~ageorges/">Aïna Linn Georges</b></a>
+  <ul>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2022-07 to 2022-09:<br/>
+    Capabilities Backend to CompCert with Secure Components
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+  [PhD Student at Aarhus University]
+  </li>
 
 </ul>
 
@@ -67,7 +119,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>
   <ul>
-    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> then at MPI-SP, 2019-10 to 2021-??:<br/>
+    <li style="margin-top: 1ex;">PostDoctoral Researcher at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> then at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2019-10 to 2021-??:<br/>
     <a href="https://arxiv.org/abs/1802.00588">Micro-policies backend for secure compilation</a>
     </li>
   </ul>
