--- a/group.html
+++ b/group.html
@@ -54,7 +54,7 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a></b>
   <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
+    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-08 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (since 2020-05):<br/>
     Secure Compartmentalizing Compilation to a Tagged Architecture</li>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2018-02 to 2018-07:<br/>
     <a href="https://arxiv.org/abs/1807.04603">A Trace-based Proof Technique for Secure Compilation</a></li>
