--- a/group.html
+++ b/group.html
@@ -22,7 +22,7 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.researchgate.net/profile/Carmine_Abate">Carmine Abate</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>
   <ul>
     <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
     <a href="">A Formal Framework for Correct and Secure Compilation</a></li>
@@ -92,7 +92,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-10 to 2022-09:<br/>
-    Formal verification in <a href="https://www.fstar-lang.org">F*</a> and <a href="https://github.com/SSProve">SSProve</a>
+    Formal verification in <a href="https://www.fstar-lang.org">F*</a> and Coq/<a href="https://github.com/SSProve">SSProve</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
