--- a/group.html
+++ b/group.html
@@ -42,7 +42,10 @@
     Towards the secure interoperability between F* and ML
     </li>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-07 to 2020-11:<br/>
-    Towards the secure interoperability between F* and ML
+    Towards the secure interoperability between F* and ML;<br/>
+    <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+    <b>[1st prize at Student Research Competition at <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> (graduates section)]</b>
+    </div>
     </li>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-07 to 2019-11:<br/>
     Verifying programs with IO in F* including a simple web server</li>
@@ -75,7 +78,7 @@
 [MSc student at 
 PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
 [PhD student <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
-[<b>Will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022</b>]
+[<b>Soon Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
 </div>
   </li>
 
