--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at
   MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
@@ -172,6 +172,8 @@ could contribute:
   <!-- <li>Conference (CSF 2021): 22-25 June 2021, <\!-- Dubrovnik, Croatia -\-> Online</li> -->
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;">Cezar Constantin-Andrici won 1st prize at Student Research Competition at <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> (graduates section)</li>
 
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
