--- a/group.html
+++ b/group.html
@@ -44,7 +44,7 @@
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-07 to 2020-11:<br/>
     Towards the secure interoperability between F* and ML;<br/>
     <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-    <b>[1st prize at Student Research Competition at <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> (graduates section)]</b>
+    <b>[1st prize at Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> (graduates section)]</b>
     </div>
     </li>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2019-07 to 2019-11:<br/>
