--- a/index.html
+++ b/index.html
@@ -129,15 +129,6 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
-
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at
-  MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
   <li>Abstract deadline: 14 September 2022</li>
@@ -153,13 +144,23 @@ could contribute:
   </ul>
   </li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, supervised PhD student at
+  MPI-SP<!-- (and before that Inria Paris) -->, took a Formal Verification Engineer / Researcher position in the Dresden Research Center of Huawei, starting in May 2022.</li>
+
   <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b>, December 2021 (Co-Organizer)
   <!-- <ul> --> 
   <!-- <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li> -->
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a> for <a href="https://github.com/SSProve/ssprove">SSProve</a></b>
+  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></b> for<br/>
+  <a href="https://github.com/SSProve/ssprove">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
@@ -173,7 +174,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Cezar Constantin-Andrici won 1st prize at Student Research Competition at <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> (graduates section)</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> <!-- (graduates section) --></li>
 
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
@@ -239,13 +240,13 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
-    <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a>
-     (<a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">Thesis</a>)
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org"> -->
+  <!--   <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a> -->
+  <!--    (<a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">Thesis</a>) -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
-    Principles of Programming Languages, POPL 2018 & 2019</a>
+  <li style="margin-bottom: 1ex;"><a href="https://popl23.sigplan.org/series/POPL">
+    <b>Principles of Programming Languages</b>, POPL 2018 & 2019</a>
     (Artifact Evaluation Co-Chair)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
