--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition">ICFP 2020</a> <!-- (graduates section) --></li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <!-- (graduates section) --></li>
 
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
