--- a/group.html
+++ b/group.html
@@ -31,7 +31,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
-[PhD student at Inria/ENS Paris, then at MPI-SP/RUB]<br/>
+[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
 [<b>Now Formal Verification Engineer/Researcher in the Dresden Research Center of Huawei</b>]
 </div></li>
 
@@ -51,7 +51,7 @@
     Verifying programs with IO in F* including a simple web server</li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [MSc student at University of Iasi, Romania] [PhD student at MPI-SP/RUB]
+  [MSc student at University of Iasi, Romania] [PhD student at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
   </div>
   </li>
 
@@ -64,7 +64,7 @@
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc student at <a href="http://www.ens-rennes.fr/">ENS Rennes</a>]
-[PhD student at Inria/ENS Paris, then at MPI-SP/RUB]
+[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://github.com/mtzguido">Guido Martínez</a></b>
