--- a/group.html
+++ b/group.html
@@ -145,7 +145,9 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-05 to 2020-04:
     Relational program verification</li>
   </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]</div></li>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
+[Now PhD student at KU Leuven]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.theolaurent.fr">Théo Laurent</a></b>
   <ul>
