--- a/group.html
+++ b/group.html
@@ -42,7 +42,7 @@
     Towards the secure interoperability between F* and ML
     </li>
     <li style="margin-top: 1ex;">Research Intern/Engineer at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-07 to 2020-11:<br/>
-    Towards the secure interoperability between F* and ML;<br/>
+    Towards the secure interoperability between F* and ML<br/>
     <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
     <b>[1st prize at Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> (graduates section)]</b>
     </div>
