--- a/group.html
+++ b/group.html
@@ -77,7 +77,7 @@
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
 [MSc student at 
 PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Rosario</a>]
-[PhD student <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
+[PhD student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<ahref="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario]<br/>
 [<b>Soon Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a></b>]
 </div>
   </li>
@@ -142,8 +142,8 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 
   <li style="margin-bottom: 1ex;"><b><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-05 to 2020-04:
-    Relational program verification</li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> 2019-05 to 2020-04:<br/>
+    <a href="https://arxiv.org/abs/1907.05244">The next 700 relational program logics</a> and <a href="https://eprint.iacr.org/2021/397">SSProve</a></li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[MSc student at <a href="http://www.informatique.univ-paris-diderot.fr">Paris 7</a> and <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
 [Now PhD student at KU Leuven]
