--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Open position</b>: I am looking for an excellent PostDoc <!-- to work with us --> on formal verification (F* and Coq)</li>
+  <li style="margin-bottom: 1ex;"><b>Open position:
+  <a href="https://sympa.inria.fr/sympa/arc/coq-club/2022-09/msg00023.html">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b>
+<!-- I am looking for an excellent PostDoc to work with us on formal verification (F* and Coq) -->
+  </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
