--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b>Open position:
-  <a href="https://sympa.inria.fr/sympa/arc/coq-club/2022-09/msg00023.html">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b>
+  <a href="https://groups.google.com/g/fstar-mailing-list/c/N6L2tl3Axt8">Looking for PostDoc on Program Verification Techniques in F* and Coq</a></b>
 <!-- I am looking for an excellent PostDoc to work with us on formal verification (F* and Coq) -->
   </li>
 
