--- a/publications.html
+++ b/publications.html
@@ -561,6 +561,11 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Editor</h3>
 <ol start="41" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
+  David Chisnall, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Mathias Payer.<br/>
+  <b><a href="http://dx.doi.org/10.4230/DagRep.11.10.173">Secure Compilation
+  (Dagstuhl Seminar 21481)</a></b>. Dagstuhl Reports 11(10):173–204, 2021.</li>
+
+  <li style="margin-bottom: 1ex;">
   C&#259;t&#259;lin Hri&#539;cu and Andrei Popescu,
   editors. <b><a href="https://doi.org/10.1145/3437992">Proceedings of the 10th
   ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP
@@ -575,7 +580,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
-  (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
+  (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30, 2018.</li>
 
 </ol>
 
@@ -602,7 +607,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="44" style="width:42em; text-align: left">
+<ol start="45" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://catalin-hritcu.github.io/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, January 2019.
   <ul style="font-size: small">
@@ -651,7 +656,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="47" style="width:42em; text-align: left">
+<ol start="48" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -666,7 +671,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="48" style="width:42em; text-align: left">
+<ol start="49" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
