--- a/publications.html
+++ b/publications.html
@@ -55,6 +55,7 @@
     IEEE Computer Security Foundations Symposium (CSF)</a>, pages 608--622. June 2021.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
+      <li><a href="https://eprint.iacr.org/2021/397">Improved and extended version</a></li>
       <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
           <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
