--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/CPP-2023"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair</b>, since 2021)
   <ul>
-  <li>Abstract deadline: 14 September 2022</li>
-  <li>Submission deadline: 21 September 2022</li>
+  <!-- <li>Abstract deadline: 14 September 2022</li> -->
+  <!-- <li>Submission deadline: 21 September 2022</li> -->
   <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/prisc-2023"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
   <ul>
-  <!-- <li>Submission deadline: ??? 2022</li> -->
+  <li>Submission deadline: 27 October 2022</li>
   <li>Workshop: 21 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
