--- a/group.html
+++ b/group.html
@@ -92,6 +92,13 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   </ul>
   </li>
 
+</ul>
+
+
+<h2>Past Group Members</h2>
+
+<ul style="width:42em; text-align: left">
+
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
   <ul>
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-10 to 2022-09:<br/>
@@ -99,7 +106,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [<b>Soon tenured researcher (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></b>]
+  [<b>Now tenured researcher (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a></b>]
   </div>
   </li>
 
@@ -112,13 +119,6 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
   [PhD Student at Aarhus University]
   </li>
-
-</ul>
-
-
-<h2>Past Group Members</h2>
-
-<ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;"><b><a href="https://perso.ens-lyon.fr/adrien.durier/">Adrien Durier</a></b>
   <ul>
