--- a/index.html
+++ b/index.html
@@ -546,11 +546,11 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://cs.au.dk/~ageorges/">Aïna Linn Georges</a> (Intern, Aarhus University)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://cs.au.dk/~ageorges/">Aïna Linn Georges</a> (Intern, Aarhus University)</li> -->
 
 </ul>
 
