--- a/group.html
+++ b/group.html
@@ -22,19 +22,6 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>
-  <ul>
-    <li style="margin-top: 1ex;">PhD Student at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
-    <a href="">A Formal Framework for Correct and Secure Compilation</a></li>
-    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05:<br/>
-    <a href="https://arxiv.org/abs/1807.04603">Robust Property Preservation for Secure Compilation</a></li>
-  </ul>
-  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
-[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
-[<b>Now Formal Verification Engineer/Researcher in the Dresden Research Center of Huawei</b>]
-</div></li>
-
 <!-- https://www.linkedin.com/in/cezar-andrici-49771663/ -->
   <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a></b>
   <ul>
@@ -98,6 +85,19 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
 <h2>Past Group Members</h2>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>
+  <ul>
+    <li style="margin-top: 1ex;"><b>Graduated PhD student</b> at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a> (2018-06 to 2020-04) then at <a href="https://www.mpi-sp.org/">MPI-SP</a> (2020-05 to 2022-04):<br/>
+    <a href="">A Formal Framework for Correct and Secure Compilation</a></li>
+    <li style="margin-top: 1ex;">Research Intern at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>, 2017-12 to 2018-05:<br/>
+    <a href="https://arxiv.org/abs/1807.04603">Robust Property Preservation for Secure Compilation</a></li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
+[MSc student at <a href="http://www.maths.unitn.it/en">University of Trento</a>]
+[PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]<br/>
+[<b>Now Formal Verification Engineer/Researcher in the Dresden Research Center of Huawei</b>]
+</div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b></li>
   <ul>
