--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, MPI-SP)</li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, MPI-SP)</li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
 
