--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, former PostDoc in my group, has obtained a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting on 1 October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Professor at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in January 2023.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, will start as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, will start as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in fall 2022.</li>
 
@@ -575,6 +575,21 @@ I am very fortunate to work with a group of outstanding students and starting re
 <p>For a complete list of my papers please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Arthur Azevedo de Amorim,
+    Roberto Blanco,
+    Aïna Linn Georges,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Andrew Tolmach.
+    <b><a href="publications/SECOMP2CHERI-PriSC23.pdf">SECOMP2CHERI: Securely Compiling Compartments
+  from CompCert C to a Capability Machine</a></b>. Draft Extended Abstract.
+    October 2022.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
