--- a/group.html
+++ b/group.html
@@ -306,6 +306,15 @@ Founder and CEO of <a href="https://www.legai.app">LegAI</a>, and PostDoc at <a 
 [Now Senior Software Engineer at Mozilla]
 </div></li>
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.engboris.fr/research/">Boris Eng</a></b>
+  <ul>
+    <li style="margin-top: 1ex;">Research Internship at Inria (advised by Yannis Juglaret), 2016-04 to 2016-06:<br/>
+      <a href="https://arxiv.org/abs/1602.04503">Partial type safety using Coq</a>
+    </li>
+  </ul>
+  <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">[Student at Université Paris 7] [Now ATER at Université Sorbonne Paris Nord]
+</div></li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://www.linkedin.com/in/diane-gallois-wong-998175206/">Diane Gallois-Wong</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Internship at Inria, 2016-03 to 2016-08:<br/> <a href="https://catalin-hritcu.github.io/students/diane/report.pdf">Formalising Luck: Improved Probabilistic Semantics for Property-Based Generators</a></li>
