--- a/group.html
+++ b/group.html
@@ -54,7 +54,7 @@
 [PhD student at Inria/ENS Paris, then at <a href="https://www.mpi-sp.org/">MPI-SP</a>/RUB]
 </div></li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/mtzguido">Guido Martínez</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>
   <ul>
     <li style="margin-top: 1ex;">Co-Supervised PhD Student at <a href="http://www.cifasis-conicet.gov.ar">CIFASIS</a>-<a href="https://www.rosario-conicet.gov.ar/investigacion/cifasis-menu">CONICET</a> Rosario since 2017-04:<br/>
      Metatheory for Semi-Automatic Verification of Effectful Programs.</li>
