--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
+  <li>Early registration deadline: 16 December 2022</li>
   <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
