--- a/index.html
+++ b/index.html
@@ -585,8 +585,9 @@ I am very fortunate to work with a group of outstanding students and starting re
     C&#259;t&#259;lin Hri&#539;cu,
     Andrew Tolmach.
     <b><a href="publications/SECOMP2CHERI-PriSC23.pdf">SECOMP2CHERI: Securely Compiling Compartments
-  from CompCert C to a Capability Machine</a></b>. Draft Extended Abstract.
-    October 2022.
+    from CompCert C to a Capability Machine</a></b>. Extended Abstract at
+      <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
+      Jan 2023.
     <ul style="font-size: small">
       <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
     </ul>
