--- a/index.html
+++ b/index.html
@@ -539,15 +539,13 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 <ul style="width:42em; text-align: left">
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, MPI-SP)</li> -->
-
   <li style="margin-bottom: 1ex;"><a href="https://cezarandrici.com">Cezar-Constantin Andrici</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://people.mpi-sws.org/~wuttke/">Maximilian Wuttke</a> (PhD Student, MPI-SWS, starting at MPI-SP in Feb 2023)</li>
 
-  <!-- <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li> -->
+  <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
