--- a/index.html
+++ b/index.html
@@ -576,6 +576,19 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Théo Winterhalter.
+    <b><a href="https://popl23.sigplan.org/details/prisc-2023-papers/8/Securely-Compiling-F-Programs-With-IO-and-Then-Linking-Them-Against-Weakly-Typed-Int">
+    Securely Compiling F* Programs With IO and Then Linking Them Against Weakly-Typed Interfaces</a></b>.
+    Extended Abstract at <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
+      Jan 2023.
+    <ul style="font-size: small">
+      <li><a href="http://github.com/andricicezar/fstar-io/tree/prisc-submission">F* development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Jérémy Thibault,
     Arthur Azevedo de Amorim,
     Roberto Blanco,
