--- a/publications.html
+++ b/publications.html
@@ -720,8 +720,10 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <b><a href="https://catalin-hritcu.github.io/publications/fstar-to-smt-hatt2016.pdf">From F* to SMT (extended abstract)</a></b>.
   Talk at <a href="http://hatt2016.inria.fr/">1st International Workshop on Hammers for Type Theories (HaTT)</a>, July 2016.
     <ul style="font-size: small">
-      <li><a href="https://catalin-hritcu.github.io/students/alejandro/report.pdf">More detailed report on Alejandro's MPRI Master's internship</a></li>
-      <li><a href="https://catalin-hritcu.github.io/publications/fstar-to-smt-rough-diamond.pdf"> Unpublished "Rough Diamond" that supersedes the HaTT abstract above</a></li>
+      <li>More detailed report on Alejandro's MPRI Master's internship:
+          <a href="https://catalin-hritcu.github.io/students/alejandro/report.pdf">Towards a Provably Correct Encoding from F* to SMT</a></li>
+      <li><a href="https://catalin-hritcu.github.io/publications/fstar-to-smt-rough-diamond.pdf">Unpublished "Rough Diamond"
+          that supersedes the HaTT extended abstract above</a></li>
     </ul>
   </li>
 
