--- a/publications.html
+++ b/publications.html
@@ -676,6 +676,35 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
   <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Théo Winterhalter.
+    <b><a href="https://popl23.sigplan.org/details/prisc-2023-papers/8/Securely-Compiling-F-Programs-With-IO-and-Then-Linking-Them-Against-Weakly-Typed-Int">
+    Securely Compiling F* Programs With IO and Then Linking Them Against Weakly-Typed Interfaces</a></b>.
+    Extended Abstract at <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
+      Jan 2023.
+    <ul style="font-size: small">
+      <li><a href="http://github.com/andricicezar/fstar-io/tree/prisc-submission">F* development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Jérémy Thibault,
+    Arthur Azevedo de Amorim,
+    Roberto Blanco,
+    Aïna Linn Georges,
+    C&#259;t&#259;lin Hri&#539;cu,
+    Andrew Tolmach.
+    <b><a href="publications/SECOMP2CHERI-PriSC23.pdf">SECOMP2CHERI: Securely Compiling Compartments
+    from CompCert C to a Capability Machine</a></b>. Extended Abstract at
+      <a href="https://popl23.sigplan.org/home/prisc-2023">Workshop on Principles of Secure Compilation (PriSC)</a>.
+      Jan 2023.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Cezar-Constantin Andrici,
     Théo Winterhalter,
     C&#259;t&#259;lin Hri&#539;cu, and
     Exequiel Rivas.
