--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ could contribute:
   <ul>
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
-  <li>Early registration deadline: 16 December 2022</li>
+  <!-- <li>Early registration deadline: 16 December 2022</li> -->
   <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
@@ -145,7 +145,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/home/prisc-2023"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC (Steering Committee Chair</b>, since 2019)
   <ul>
   <!-- <li>Submission deadline: 27 October 2022</li> -->
-  <li>Early registration deadline: 16 December 2022</li>
+  <!-- <li>Early registration deadline: 16 December 2022</li> -->
   <li>Workshop: 21 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
   </ul>
   </li>
@@ -180,8 +180,6 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <!-- (graduates section) --></li>
-
   <li style="margin-bottom: 1ex;">
   <b><a href="https://www.ieee-security.org/TC/SP2021/">IEEE Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
   <ul>
@@ -189,6 +187,8 @@ could contribute:
   <!-- <li>Conference: 23-27 May 2021, Online</li> -->
   </ul>
   </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://cezarandrici.com">Cezar Constantin-Andrici</a></b> won 1st prize at the Student Research Competition of <a href="https://icfp20.sigplan.org/track/icfp-2020-student-research-competition#Results">ICFP 2020</a> <!-- (graduates section) --></li>
 
   <li style="margin-bottom: 1ex;">
     On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br>
