--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ could contribute:
   <!-- <li>Abstract deadline: 14 September 2022</li> -->
   <!-- <li>Submission deadline: 21 September 2022</li> -->
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
-  <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
+  <!-- <li>Conference: 16-17 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li> -->
   </ul>
   </li>
 
@@ -146,7 +146,7 @@ could contribute:
   <ul>
   <!-- <li>Submission deadline: 27 October 2022</li> -->
   <!-- <li>Early registration deadline: 16 December 2022</li> -->
-  <li>Workshop: 21 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li>
+  <!-- <li>Workshop: 21 January 2023, Boston, MA, USA (with <a href="https://popl23.sigplan.org/">POPL</a>)</li> -->
   </ul>
   </li>
 
