--- a/index.html
+++ b/index.html
@@ -576,6 +576,19 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Philipp G. Haselwarter,
+    Benjamin Salling Hvass,
+    Lasse Letager Hansen,
+    Théo Winterhalter,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Bas Spitters.
+    <b><a href="">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>. Draft. February 2023.
+    <!-- <ul style="font-size: small"> -->
+    <!--   <li><a href="">Coq development</a></li> -->
+    <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     C&#259;t&#259;lin Hri&#539;cu, and
     Théo Winterhalter.
