--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Théo Winterhalter,
     C&#259;t&#259;lin Hri&#539;cu, and
     Bas Spitters.
-    <b><a href="">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>. Draft. February 2023.
+    <b><a href="">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>. Draft. February 2023.
     <!-- <ul style="font-size: small"> -->
     <!--   <li><a href="">Coq development</a></li> -->
     <!-- </ul> -->
