--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 <b>Tenured faculty and head of the <a href="#group">Formally Verified Security group</a><br/> at the
 <a href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a></b>
 in <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.<br/>
-I am also co-opted by the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a>
-at <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>,<br/>
-and an associated PI of RUB's <a href="https://casa.rub.de/en/">CASA Excellence Center</a>.
+I am also a PI of the <a href="https://casa.rub.de/en/">CASA Excellence Center</a> at 
+<a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>.
+<!-- I am also co-opted by the <a href="https://informatik.rub.de/en/">Faculty of Computer Science</a> -->
+<!-- at <a href="https://www.ruhr-uni-bochum.de/en">Ruhr University Bochum (RUB)</a>,<br/> -->
+<!-- and an associated PI of RUB's <a href="https://casa.rub.de/en/">CASA Excellence Center</a>. -->
 </p>
 
 <p style="width:42em; text-align: left">
