--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
 in the <a href="https://team.inria.fr/prosecco/">Prosecco team</a><!-- (now officially on leave; fr: "mise en disponibilité") -->.
 Between May 2011 and
 September 2013 I was a Postdoctoral Research Associate at
-the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
+the <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>,
 working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
 of <a href="http://www.cis.upenn.edu/~bcpierce/"><!--Prof. -->Benjamin
@@ -154,7 +154,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a></b>, former PostDoc in my group, took a tenured researcher position (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">CR</a>) at Inria Saclay, in <a href="https://deducteam.gitlabpages.inria.fr/">Deducteam</a>, starting in October 2022. <b><a href="https://kenji.maillard.blue/">Kenji Mailard</a></b>, graduated PhD student I supervised, has obtained a similar Inria position (<a href="https://www.inria.fr/en/inria-starting-faculty-position-isfp">ISFP</a>), in the <a href="https://gallinette.gitlabpages.inria.fr/website/">Gallinette team</a> in Nantes.</li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated co-supervised PhD student at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, started as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
+  <li style="margin-bottom: 1ex;"><b><a href="http://arthuraa.net">Arthur Azevedo de Amorim</a></b>, graduated PhD student I co-supervised at <a href="https://www.cis.upenn.edu/~plclub/">University of Pennsylvania</a>, started as Assistant Prof. at <a href="https://www.rit.edu/computing/department-computer-science">Rochester Institute of Technology</a> in Jan 2023.</li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martinez</a></b>, co-supervised PhD student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
 
