--- a/publications.html
+++ b/publications.html
@@ -675,6 +675,19 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="49" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Philipp G. Haselwarter,
+    Benjamin Salling Hvass,
+    Lasse Letager Hansen,
+    Théo Winterhalter,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Bas Spitters.
+    <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>. Draft. February 2023.
+    <!-- <ul style="font-size: small"> -->
+    <!--   <li><a href="">Coq development</a></li> -->
+    <!-- </ul> -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     C&#259;t&#259;lin Hri&#539;cu, and
     Théo Winterhalter.
